<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OpenTypeA" >

    <TextView android:id="@+id/a_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_a" />
       <EditText android:id="@+id/a_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/a_textview"
        android:hint="@string/edit_message_title" />
          <EditText android:id="@+id/a_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/a_title"
        android:hint="@string/edit_message_body1" />
          
          <EditText android:id="@+id/a_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_below="@id/a_body"
        android:hint="@string/edit_message_end" />

</RelativeLayout>
